# friendly-fastapi

./: README.md  config.toml  flake.nix  pyproject.toml
src/fastapi_testing/: config.py  fileservice.py  main.py
src/friendly/: fileservice.py  main.py
tests/: test_config.py  test_download.py  test_fileservice.py
