[project]
name = "fastapi-testing"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Zak Cook", email = "zakcook4@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.12",
    "uvicorn[standard]>=0.34.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=8.3.5",
]
